# VoiceTutor

./: .gitignore  DEPLOYMENT.md  EMAIL.md  GLOSSARY.md  INTERVIEW_PREP.md  README.md  VIDEO_SCRIPT.md  WRITEUP.md  fix_bot.py  rewrite_git.py  test_pipecat.py
backend/: .env.example  Dockerfile  bot.py  pyproject.toml  requirements.txt  server.py
backend/agent/: __init__.py  grader.py  orchestrator.py  prompts.py  pronunciation.py  prosody.py  tools.py
backend/agent/modes/: __init__.py
backend/curriculum/: __init__.py  lessons.json  loader.py
backend/memory/: __init__.py  persistent.py  schema.sql  session.py
backend/observability/: __init__.py  logger.py  metrics.py
backend/tests/: conftest.py  test_bot_imports.py  test_curriculum.py  test_fsm.py  test_fsm_edges.py  test_fsrs_invariants.py  test_grader.py  test_grader_edge_cases.py  test_memory.py  test_metrics.py  test_prompts.py  test_pronunciation.py  test_prosody.py  test_reset_paths.py  test_serializer.py  test_server_endpoint_scenarios.py  test_server_endpoints.py  test_tools.py
backend/tests/e2e/: test_full_user_journey.py  test_scripted_flows.py
backend/transports/: __init__.py  serializer.py  websocket.py
docs/: architecture.md  architecture.mmd
frontend/: .env.example  .env.production  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CurriculumShowcase.tsx  Features.tsx  Footer.tsx  Hero.tsx  ModeBadge.tsx  Navbar.tsx  ProgressPanel.tsx  QuickCommands.tsx  StackSection.tsx  Transcript.tsx  (+1 more)
(+2 files in other folders)
