[project]
name = "voicetutor-backend"
version = "0.1.0"
description = "Voice-first Spanish language tutor — Pipecat agent backend"
requires-python = ">=3.10,<3.13"
readme = "../README.md"

dependencies = [
  "pipecat-ai[silero,assemblyai,deepgram,elevenlabs,groq,openai,webrtc]>=0.0.55",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
